Minor tidying to avoid problem warnings
git-svn-id: http://subversion.assembla.com/svn/Debrief@2550 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.data_feed/build.properties
+++ b/trunk/org.mwc.debrief.data_feed/build.properties
@@ -3,4 +3,7 @@ output.data_feed.jar = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                data_feed.jar,\
-               icons/
+               icons/,\
+               bin/
+jars.compile.order = data_feed.jar,\
+                     library.jar
