--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -6,10 +6,21 @@ bin.includes = META-INF/,\
                .,\
                bin/,\
                libs/,\
-               libs/jaxen-full.jar,\
-               libs/jdom.jar,\
-               libs/parser.jar,\
                libs/postgis_1.3.5.jar,\
                libs/postgresql-8.3-604.jdbc4.jar,\
-               libs/saxpath.jar,\
-               libs/xerces.jar
+               libs/xerces.jar,\
+               libs/parser.jar,\
+               libs/jaxen-full.jar,\
+               libs/jdom.jar,\
+               libs/saxpath.jar
+source.libs/xerces.jar = src/,\
+                         schemas/
+source.libs/saxpath.jar = src/,\
+                          schemas/
+source.libs/parser.jar = src/,\
+                         schemas/
+source.libs/jaxen-full.jar = src/,\
+                             schemas/
+source.libs/jdom.jar = src/,\
+                       schemas/
+
