--- a/trunk/org.mwc.debrief.build/build_release.properties
+++ b/trunk/org.mwc.debrief.build/build_release.properties
@@ -1,7 +1,7 @@
-eclipseLocation=d:/apps/eclipse-SDK-3.5.1-win32/eclipse
-buildDirectory=d:/dev/cmap/deploy/out
-pluginPath=d:/apps/eclipse-3.5.1-delta-pack/eclipse
-path2jre=C:\Program Files\Java\jdk1.6.0_16\jre
+eclipseLocation=c:/apps/eclipse-SDK-3.5.1-win32/eclipse
+buildDirectory=c:/dev/cmap5/deploy/out
+pluginPath=c:/apps/eclipse-3.5.1-delta-pack/eclipse
+path2jre=C:/Program Files/Java/jre1.6.0_06
 
 pdeBuildPluginVersion=3.5.1.R35x_20090820
 equinoxLauncherPluginVersion=1.0.201.R35x_v20090715
