--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.cmap.core"
    name="CMap Core Resources Plug-in"
-   version="1.0.78"
+   version="1.0.79"
    provider-name="MWC"
    class="org.mwc.cmap.core.CorePlugin">
 
@@ -144,7 +144,7 @@
    <extension
          point="org.eclipse.ui.views">
          <view
-         	class="com.pml.lengtheditor.views.TestViewPart"
+         	class="org.mwc.cmap.core.property_support.lengtheditor.views.TestViewPart"
 		    id="com.pml.lengtheditor.viewId"
 		    name="Standard Lengths Test">
          </view>
@@ -154,7 +154,7 @@
          point="org.eclipse.ui.preferencePages">
       <page
             category="org.mwc.cmap.core.preferences.CMAPPrefsPage"
-            class="com.pml.lengtheditor.preferences.LengthsLookupPreferencesPage"
+            class="org.mwc.cmap.core.property_support.lengtheditor.preferences.LengthsLookupPreferencesPage"
             id="com.pml.lengtheditor.preferencesId"
             name="Standard array offsets">
       </page>
