Polish off lengths editor, integrate help
git-svn-id: http://subversion.assembla.com/svn/Debrief@2568 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -45,7 +45,7 @@
      <page
            class="org.mwc.cmap.core.preferences.CMAPPrefsPage"
            id="org.mwc.cmap.core.preferences.CMAPPrefsPage"
-           name="CMAP"/>
+           name="Maritime Analysis"/>
   </extension>
   <extension
         point="org.eclipse.core.runtime.preferences">
