early import of KML from plain text working
git-svn-id: http://subversion.assembla.com/svn/Debrief@2605 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -70,6 +70,10 @@
 		<loader class="org.mwc.debrief.core.loaders.XMLLoader"
 			extensions="xml" name="Debrief XML Loader" />
 	</extension>
+	<extension point="org.mwc.debrief.core.DebriefPlotLoader">
+		<loader class="org.mwc.debrief.core.loaders.KMLLoader"
+			extensions="kml" name="Google earth Loader" />
+	</extension>
 
 
 
