--- a/trunk/org.mwc.asset.core/plugin.xml
+++ b/trunk/org.mwc.asset.core/plugin.xml
@@ -77,21 +77,7 @@
          </parameter>
       </describer>
    	</content-type>
-   	   <content-type
-         base-type="org.eclipse.core.runtime.xml"
-         file-extensions="asset"
-         id="org.mwc.asset.contenttype.ScenarioFile"
-         name="ASSET Scenario File"
-         priority="high">
-      <describer class="com.oxygenxml.editor.editors.xml.XMLContentDescriber">
-         <parameter name="element"
-                    value="Scenario">
-         </parameter>
-      </describer>
-   	</content-type>
-	</extension>
-
-  <!-- <content-type
+	   <content-type
          base-type="org.eclipse.core.runtime.xml"
          file-extensions="asset"
          id="org.mwc.asset.contenttype.ScenarioFile"
@@ -102,9 +88,22 @@
                     value="Scenario">
          </parameter>
       </describer>
-   	</content-type> -->
+   	</content-type>
+	
+	</extension>
 
-	<!--
+  <!--
+  <content-type base-type="org.eclipse.core.runtime.xml"
+		file-extensions="asset" id="org.mwc.asset.contenttype.ScenarioFile"
+		name="ASSET Scenario File" priority="high">
+		<describer class="com.oxygenxml.editor.editors.xml.XMLContentDescriber">
+			<parameter name="element" value="Scenario">
+			</parameter>
+		</describer>
+	</content-type>
+   	 -->
+
+	
    <extension
          name="create a catalog entry for the ASSET schema"
          point="org.eclipse.wst.xml.core.catalogContributions">
@@ -116,7 +115,7 @@
          </public>
       </catalogContribution>
    </extension>  
-   -->
+
 
 	
 	   
