introduce tidier way of including schema reference documentation
git-svn-id: http://subversion.assembla.com/svn/Debrief@2625 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.help/plugin.xml
+++ b/trunk/org.mwc.asset.help/plugin.xml
@@ -9,6 +9,11 @@
             file="html/legacy/toc.xml"
             primary="true">
       </toc>
+      <toc
+            file="html/schemaDoc.xml"
+            primary="true">
+      </toc>
+      
    </extension>
    
    <extension point="org.eclipse.ui.actionSets">
