Update versions, make sure important images are included in build, minor cheat sheet improvements
git-svn-id: http://subversion.assembla.com/svn/Debrief@2626 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/build.properties
+++ b/trunk/org.mwc.asset.core/build.properties
@@ -3,7 +3,9 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               asset.core.jar
+               asset.core.jar,\
+               splash.bmp,\
+               icons/
 jars.compile.order = .,\
                      asset.core.jar
 source.asset.core.jar = .
