--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -12,7 +12,8 @@ bin.includes = META-INF/,\
                libs/parser.jar,\
                libs/jaxen-full.jar,\
                libs/jdom.jar,\
-               libs/saxpath.jar
+               libs/saxpath.jar,\
+               schemas/
 source.libs/xerces.jar = src/,\
                          schemas/
 source.libs/saxpath.jar = src/,\
