Integrated michael's template code, progressing tutorial files
git-svn-id: http://subversion.assembla.com/svn/Debrief@2628 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/build.properties
+++ b/trunk/org.mwc.asset.core/build.properties
@@ -5,7 +5,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                asset.core.jar,\
                splash.bmp,\
-               icons/
+               icons/,\
+               templates/
 jars.compile.order = .,\
                      asset.core.jar
 source.asset.core.jar = .
