More on tutorial, tidy build
git-svn-id: http://subversion.assembla.com/svn/Debrief@2631 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/build.properties
+++ b/trunk/org.mwc.asset.core/build.properties
@@ -1,12 +1,9 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
-               .,\
                plugin.xml,\
                asset.core.jar,\
                splash.bmp,\
                icons/,\
-               templates/
-jars.compile.order = .,\
-                     asset.core.jar
+               templates/,\
+               asset_schemas/
+jars.compile.order = asset.core.jar
 source.asset.core.jar = .
