Rename view to remove 2 suffix
git-svn-id: http://subversion.assembla.com/svn/Debrief@2644 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.ScenarioController2/plugin.xml
+++ b/trunk/org.mwc.asset.ScenarioController2/plugin.xml
@@ -5,7 +5,7 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            name="Scenario controller 2"
+            name="Scenario controller"
             icon="icons/gears_run.png"
             category="org.mwc.asset.core.simulation.category"
             class="org.mwc.asset.scenariocontroller2.views.ScenarioControllerView"
