Lots more fleshing out of help
git-svn-id: http://subversion.assembla.com/svn/Debrief@2647 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.core/build.properties
+++ b/trunk/org.mwc.asset.core/build.properties
@@ -6,6 +6,7 @@ bin.includes = META-INF/,\
                splash.bmp,\
                icons/,\
                templates/,\
-               asset_schemas/
+               asset_schemas/,\
+               .
 jars.compile.order = asset.core.jar
 source.asset.core.jar = .
