switch back to the old ssk tracks, correctly resample sensor data, correctly determine start/end time for sensor track
git-svn-id: http://subversion.assembla.com/svn/Debrief@2674 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -1,5 +1,4 @@
 source.. = src/,\
-           schemas/,\
            libs/
 output.. = bin/
 bin.includes = META-INF/,\
@@ -11,17 +10,9 @@ bin.includes = META-INF/,\
                libs/xerces.jar,\
                libs/parser.jar,\
                libs/jaxen-full.jar,\
-               libs/jdom.jar,\
-               libs/saxpath.jar,\
-               schemas/
-source.libs/xerces.jar = src/,\
-                         schemas/
-source.libs/saxpath.jar = src/,\
-                          schemas/
-source.libs/parser.jar = src/,\
-                         schemas/
-source.libs/jaxen-full.jar = src/,\
-                             schemas/
-source.libs/jdom.jar = src/,\
-                       schemas/
-
+               libs/jdom.jar
+source.libs/xerces.jar = src/
+source.libs/saxpath.jar = src/
+source.libs/parser.jar = src/
+source.libs/jaxen-full.jar = src/
+source.libs/jdom.jar = src/
