reduce the number of libs carried within plugin
git-svn-id: http://subversion.assembla.com/svn/Debrief@2727 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -6,13 +6,4 @@ bin.includes = META-INF/,\
                bin/,\
                libs/,\
                libs/postgis_1.3.5.jar,\
-               libs/postgresql-8.3-604.jdbc4.jar,\
-               libs/xerces.jar,\
-               libs/parser.jar,\
-               libs/jaxen-full.jar,\
-               libs/jdom.jar
-source.libs/xerces.jar = src/
-source.libs/saxpath.jar = src/
-source.libs/parser.jar = src/
-source.libs/jaxen-full.jar = src/
-source.libs/jdom.jar = src/
+               libs/postgresql-8.3-604.jdbc4.jar
