--- a/trunk/org.mwc.cmap.plot3d/plugin.xml
+++ b/trunk/org.mwc.cmap.plot3d/plugin.xml
@@ -12,9 +12,9 @@
                icon="icons/view3d.gif"
                id="org.mwc.cmap.plot3d.actions.View3d"
                label="&amp;View 3d"
-               menubarPath="org.mwc.debrief.core.EditorView/additions"
+               menubarPath="org.mwc.debrief.core.EditorView/viewRadio"
                style="push"
-               toolbarPath="org.mwc.debrief.core.EditorView/additions"/>                    
+               toolbarPath="org.mwc.debrief.core.EditorView/viewRadio"/>                    
       </actionSet>
    </extension>
    
