Get NewPlot to actually open the plot on completion, introduce another composite cheat sheet
git-svn-id: http://subversion.assembla.com/svn/Debrief@2898 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.help/plugin.xml
+++ b/trunk/org.mwc.debrief.help/plugin.xml
@@ -99,7 +99,16 @@
             category="org.mwc.debrief.help.cheat_viewing"
             contentFile="cheat_sheets/ViewingPlots/FilteringYourData.xml"
             id="org.mwc.debrief.help.viewing.filtering_data"
-            name="Filtering visible data"/>            
+            name="Filtering visible data"/>     
+            
+                  <cheatsheet
+            category="org.mwc.debrief.help.cheat_started"
+            composite="true"
+            contentFile="cheat_sheets/analysis/CompositeAnalysis.xml"
+            id="org.mwc.debrief.help.cheatsheet.analysis.composite"
+            name="Starting to analyse data in Debrief">
+      </cheatsheet>   
+                   
             
      <!-- now for the formatting bits -->
       <cheatsheet
