Avoid startup error related to defining the 3d action button
git-svn-id: http://subversion.assembla.com/svn/Debrief@2918 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.plot3d/plugin.xml
+++ b/trunk/org.mwc.cmap.plot3d/plugin.xml
@@ -12,9 +12,9 @@
                icon="icons/view3d.gif"
                id="org.mwc.cmap.plot3d.actions.View3d"
                label="&amp;View 3d"
-               menubarPath="org.mwc.debrief.core.EditorView/viewRadio"
+               menubarPath="org.mwc.debrief.core.EditorView"
                style="push"
-               toolbarPath="org.mwc.debrief.core.EditorView/viewRadio"/>                    
+               toolbarPath="org.mwc.debrief.core.EditorView"/>                    
       </actionSet>
    </extension>
    
