Fix lots of typos
git-svn-id: http://subversion.assembla.com/svn/Debrief@2923 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.help/plugin.xml
+++ b/trunk/org.mwc.debrief.help/plugin.xml
@@ -14,6 +14,9 @@
    <extension
          point="org.eclipse.ui.cheatsheets.cheatSheetContent">
       <category
+            id="org.mwc.debrief.help.cheats"
+            name="Debrief"/>
+      <category
             id="org.mwc.debrief.help.cheat_general"
             name="General"
             parentCategory="org.mwc.debrief.help.cheats"/>
@@ -21,9 +24,6 @@
             id="org.mwc.debrief.help.cheat_started"
             name="Getting started"
             parentCategory="org.mwc.debrief.help.cheats"/>
-      <category
-            id="org.mwc.debrief.help.cheats"
-            name="Debrief"/>
       <category
             id="org.mwc.debrief.help.cheat_viewing"
             name="Viewing plots"
@@ -65,44 +65,44 @@
             name="Track Reconstruction"
             parentCategory="org.mwc.debrief.help.cheats"/>         
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             contentFile="cheat_sheets/GettingStarted/CreatePlot.xml"
             id="org.mwc.debrief.help.started.create_plot"
             name="Creating a new plot"/>
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             contentFile="cheat_sheets/GettingStarted/OpenPlot.xml"
             id="org.mwc.debrief.help.started.open_plot"
             name="Opening an existing plot"/>                                       
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             contentFile="cheat_sheets/GettingStarted/FindingYourData.xml"
             id="org.mwc.debrief.help.started.existing_data"
             name="Linking to existing datafiles"/>                                       
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             contentFile="cheat_sheets/GettingStarted/GenerateProject.xml"
             id="org.mwc.debrief.help.started.generate_project"
             name="Generating a project"/>                 
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             contentFile="cheat_sheets/GettingStarted/ImportingData.xml"
             id="org.mwc.debrief.help.started.loading_data"
             name="Loading some data"/>                                      
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             composite="true"
             contentFile="cheat_sheets/GettingStarted/GettingStartedComposite.xml"
             id="org.mwc.debrief.help.started.tutorial"
             name="Getting started with Debrief tutorial"/>                     
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_viewing"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_viewing"
             contentFile="cheat_sheets/ViewingPlots/FilteringYourData.xml"
             id="org.mwc.debrief.help.viewing.filtering_data"
             name="Filtering visible data"/>     
             
                   <cheatsheet
-            category="org.mwc.debrief.help.cheat_started"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_started"
             composite="true"
             contentFile="cheat_sheets/analysis/CompositeAnalysis.xml"
             id="org.mwc.debrief.help.cheatsheet.analysis.composite"
@@ -112,26 +112,26 @@
             
      <!-- now for the formatting bits -->
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_formatting"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_formatting"
             contentFile="cheat_sheets/GettingStarted/EditingYourData.xml"
             id="org.mwc.debrief.help.formatting.editing_data"
             name="Editing your data"/>            
                                          
      <!-- and for the analysis bits -->
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_analysing"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_analysing"
             contentFile="cheat_sheets/analysis/SettingPrimaryAndSecondaryTracks.xml"
             id="org.mwc.debrief.help.analysis.pri_sec_tracks"
             name="Managing primary and secondary tracks"/>            
             
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_analysing"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_analysing"
             contentFile="cheat_sheets/analysis/TemporalNavigation.xml"
             id="org.mwc.debrief.help.analysis.temp_nav"
             name="Temporal navigation through your data"/>            
            
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_analysing"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_analysing"
             contentFile="cheat_sheets/analysis/TimeVariableAnalysis.xml"
             id="org.mwc.debrief.help.analysis.time_var_analysis"
             name="Time-related graphs of your data"/>            
@@ -139,47 +139,47 @@
             
       <!-- right, now the sensor bits -->          
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_sensor"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_sensor"
             contentFile="cheat_sheets/sensor/AnalysingSensorData.xml"
             id="org.mwc.debrief.help.sensor.analysing"
             name="Analysing sensor data in Debrief"/>            
 
       <!-- and the narrative bits -->          
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_narratives"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_narratives"
             contentFile="cheat_sheets/narratives/AnalysingNarrativeData.xml"
             id="org.mwc.debrief.help.narrativs.analysing"
             name="Analysing narrative data in Debrief"/>            
       <cheatsheet
-            category="org.mwc.debrief.help.trackRecon"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.trackRecon"
             contentFile="cheat_sheets/S2R/CombineTargetTracks.xml"
             id="org.mwc.debrief.help.trackRecon.MergeTracks"
             name="Merging two or more tracks in Debrief"/>            
 
       <!-- and the S2R bits -->
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_s2r"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_s2r"
             composite="false"
             contentFile="$nl$/cheat_sheets/S2R/GroomingTracks.xml"
             id="org.mwc.debrief.help.cheatsheet.s2r.grooming"
             name="Grooming track data">
       </cheatsheet>
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_s2r"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_s2r"
             composite="false"
             contentFile="$nl$/cheat_sheets/S2R/GenerateTargetTrack.xml"
             id="org.mwc.debrief.help.cheatsheet.s2r.genTarget"
             name="Generate a target track">
       </cheatsheet>
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_s2r"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_s2r"
             composite="false"
             contentFile="$nl$/cheat_sheets/S2R/CombineTargetTracks.xml"
             id="org.mwc.debrief.help.cheatsheet.s2r.combine"
             name="Combining sections of target track">
       </cheatsheet>
       <cheatsheet
-            category="org.mwc.debrief.help.cheat_s2r"
+            category="org.mwc.debrief.help.cheats/org.mwc.debrief.help.cheat_s2r"
             composite="true"
             contentFile="$nl$/cheat_sheets/S2R/GettingStartedComposite.xml"
             id="org.mwc.debrief.help.cheatsheet.s2r.composite"
