Reflect introduction of nWire analysis tool
git-svn-id: http://subversion.assembla.com/svn/Debrief@2951 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.ScenarioController2/.project
+++ b/trunk/org.mwc.asset.ScenarioController2/.project
@@ -26,5 +26,6 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.jem.beaninfo.BeanInfoNature</nature>
+		<nature>com.nwire.studio.tools.nwireNature</nature>
 	</natures>
 </projectDescription>
