--- a/trunk/org.mwc.cmap.grideditor/.project
+++ b/trunk/org.mwc.cmap.grideditor/.project
@@ -30,5 +30,6 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.pde.api.tools.apiAnalysisNature</nature>
+		<nature>com.nwire.studio.tools.nwireNature</nature>
 	</natures>
 </projectDescription>
