--- a/trunk/org.mwc.debrief.core/.project
+++ b/trunk/org.mwc.debrief.core/.project
@@ -25,5 +25,6 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>net.sf.eclipsensis.installoptions.InstallOptionsNature</nature>
+		<nature>com.nwire.studio.tools.nwireNature</nature>
 	</natures>
 </projectDescription>
