--- a/trunk/org.mwc.cmap.waterfall_core/.project
+++ b/trunk/org.mwc.cmap.waterfall_core/.project
@@ -13,5 +13,6 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>com.nwire.studio.tools.nwireNatureDisabled</nature>
 	</natures>
 </projectDescription>
