--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.cmap.core"
    name="CMap Core Resources Plug-in"
-   version="1.0.105"
+   version="1.0.106"
    provider-name="MWC"
    class="org.mwc.cmap.core.CorePlugin">
 
@@ -114,10 +114,9 @@
             name="Formatting"
             class="org.mwc.cmap.gridharness.LocationFormatPreferencePage"
            category="org.mwc.cmap.core.preferences.CMAPPrefsPage"
-            id="org.mwc.cmap.gridharness.preferences.format">
+            id="org.mwc.cmap.core.preferences.LocationFormatPreferencePage">
       </page>
    </extension>  
-  
   <extension
         point="org.eclipse.ui.newWizards">
      <category
