--- a/trunk/org.mwc.cmap.core/.classpath
+++ b/trunk/org.mwc.cmap.core/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/WMFWriter.jar"/>
-	<classpathentry kind="lib" path="libs/xstream-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/WMFWriter.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.legacy/libs/openmap.jar"/>
 	<classpathentry kind="lib" path="libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/jfreechart-1.0.13-swt.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xstream-1.1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
