--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -2,11 +2,7 @@ source.cmap_core.jar = src/
 output.cmap_core.jar = bin/
 bin.includes = plugin.xml,\
                cmap_core.jar,\
-               icons/,\
-               libs/WMFWriter.jar,\
-               libs/xstream-1.1.3.jar,\
-               libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar,\
-               libs/jfreechart-1.0.13-swt.jar
+               icons/
 jars.compile.order = cmap_core.jar
 src.includes = icons/,\
                src/
