Include necessary libs in output, correct sequence of initialising re-opened xy plot
git-svn-id: http://subversion.assembla.com/svn/Debrief@2986 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -2,7 +2,8 @@ source.cmap_core.jar = src/
 output.cmap_core.jar = bin/
 bin.includes = plugin.xml,\
                cmap_core.jar,\
-               icons/
+               icons/,\
+               libs/
 jars.compile.order = cmap_core.jar
 src.includes = icons/,\
                src/
